--- a/style.css
+++ b/style.css
@@ -60,6 +60,15 @@ body {
     text-align: center;
     min-width: 111px;
     color: #fff;
+    transition: all 0.4s;
+}
+.btn:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px rgba(191, 194, 197, 0.7);
+}
+.btn:active {
+    transform: translateY(-2px);
+    box-shadow: 0px 5px 10px rgba(191, 194, 197, 1);
 }
 .btn_link {
     color: #156963;
@@ -100,6 +109,11 @@ body {
     background-color: #fff;
     border: 1px solid #E0E0E0;
     padding: 22px 16px;
+    transition: transform 0.2s ease-in;
+}
+.item:hover{
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px rgba(191, 194, 197, 0.7);
 }
 .item__header {
     display: flex;
@@ -147,7 +161,11 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 16px;
-    line-height: 20px;   
+    line-height: 20px;  
+    transition: all 0.3s; 
+}
+.card__produkt:hover {
+    box-shadow:15px 20px 20px rgba(0,0,0,0.2);
 }
 .card__flower {
     margin-bottom: 16px;
