--- a/style.css
+++ b/style.css
@@ -204,6 +204,77 @@ body {
     min-width: 152px;
 }
 /*----------------------------------------------------------------------------------------------------------------*/
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;  
+    overflow-y: auto;  
+    overflow-x: hidden;  
+    transition: all 0.8s ease-in-out;  
+}
+.popup:target {
+    opacity: 1;
+    visibility: visible;
+}
+.popup:target .popup__content {
+    transform: translate(0px, 0px);
+    opacity: 1;
+}
+.popup__area {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+.popup__card {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+.popup__content {
+    display: flex;
+    background-color: #F3F4F6;
+    max-width: 800px;
+    padding: 30px;
+    position: relative;
+    transition: all 0.8s ease-in-out;
+    opacity: 0;
+    transform: perspective(600px) translate(0px, -100%) rotate(45deg);
+}
+.popup__close {
+    position: absolute;
+    right: 10px;
+    top: 10px;  
+    transition: all 0.3s;  
+}
+.popup__close:hover {
+    transform: scale(1.2);    
+}
+.popup__desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 10px;
+    max-width: 400px;
+}
+._title {
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+._text {
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+/*----------------------------------------------------------------------------------------------------------------*/
 @media (max-width: 1200px) {
     .services-section {
         grid-template-columns: 1fr 1fr;        
