--- a/style.css
+++ b/style.css
@@ -323,6 +323,19 @@ body {
     .wrapper {
         padding: 30px 40px;
     }
+    .popup__content {
+        padding: 20px;
+    }
+    ._title {
+        font-size: 35px;
+    }
+    ._text {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+    .popup__content {
+        transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+    }
 }
 
 @media (max-width: 576px) {
@@ -356,6 +369,14 @@ body {
     }
     .card {
         grid-template-columns: 1fr 1fr;       
+    }
+    ._title {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+    ._text {
+        font-size: 18px;
+        margin-bottom: 10px;
     }
 }
 
